added missing fail code
