# docs/swagger.json
@@ -117,6 +117,12 @@
                             "$ref": "#/definitions/model.MDBResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.MDBResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
